refactor: CarNames, RacingGame 객체로 기능 이동